# videoP2Proxy

./: .gitignore  LICENSE  Makefile.am  README.md  autogen.sh  av.c  av.h  avframe.c  avframe.h  client.c  client.h  common.h  configure.ac  debug.h  iotc.c  iotc.h  main.c  rtsp.cxx  rtsp.h  videop2proxy.anjuta
include/: AVAPIs.h  AVIOCTRLDEFs.h  IOTCAPIs.h  LICENSE
lib/Windows/Win32/: AVAPIs.lib  AVAPIsT.lib  AVAPIs_s.lib  IOTCAPIs.lib  IOTCAPIsT.lib  IOTCAPIs_s.lib  P2PTunnelAPIs.lib  P2PTunnelAPIsT.lib  P2PTunnelAPIs_s.lib  RDTAPIs.lib  RDTAPIsT.lib  RDTAPIs_s.lib
lib/Windows/x64/: AVAPIs.lib  AVAPIsT.lib  AVAPIs_s.lib  IOTCAPIs.lib  IOTCAPIsT.lib  IOTCAPIs_s.lib  P2PTunnelAPIs.lib  P2PTunnelAPIsT.lib  P2PTunnelAPIs_s.lib  RDTAPIs.lib  RDTAPIsT.lib  RDTAPIs_s.lib
